common.css: better main page on narrow screen - more fixes

--- a/html/common.css
+++ b/html/common.css
@@ -61,6 +61,7 @@ DIV.newsblog {
 
 .newsblog-in {
   margin-left: 245px;
+  min-width: 50%;
 }
 
 .newsblog-in2 {
@@ -297,5 +298,5 @@ pre code span {
 }
 
 .msg {
-    min-width: 50%;
+    min-width: 20em;
 }
